# PixelDancerMath

./: CMakeLists.txt  LineRay.cpp  Matrix3D.cpp  Matrix4D.cpp  PXDMath.sln  PXDMath.vcxproj  PXDMath.vcxproj.filters  Plane.cpp  Quaternion.cpp  README.md  SphereHarmonics.cpp  SphericalHarmonics.cpp  Transform.cpp  Transform4D.cpp  Vector2D.cpp  Vector3D.cpp  Vector4D.cpp  cpp.hint  main.cpp
include/: ConstantValues.h  LineRay.h  Matrix3D.h  Matrix4D.h  Plane.h  Point3D.h  Quaternion.h  SphereHarmonics.h  SphericalHarmonics.h  Transform.h  Transform4D.h  Vector2D.h  Vector3D.h  Vector4D.h
source/: LineRay.cpp  Matrix3D.cpp  Matrix4D.cpp  Plane.cpp  Quaternion.cpp  SphericalHarmonics.cpp  Transform.cpp  Transform4D.cpp  Vector2D.cpp  Vector3D.cpp  Vector4D.cpp
